# 64BitKernel

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  Readme.txt  bochsout.txt  kernel.ld  kernel_x86  symbols.c  test.sh
arch/: Makefile  arch.asm  arch.c  arch.h  doc.txt
arch/x86/: doc.txt  gdt.c  gdt.h  idt.asm  idt.c  idt.h  pae.c  pae.h  x86.asm  x86.c  x86.h
doc/: doc.txt
inc/: type.h
inc/debug/: debug.h  symbols.h
inc/devices/graphics/: graphics.h  vga.h
inc/io/: io.h
inc/itr/: itr.h
inc/mm/: mm.h
inc/paging/: paging.h
inc/sched/: sched.h
multiboot/: multiboot.asm
run/: c
scripts/: symbols
src/: Makefile  entry.asm  kmain.c
src/debug/: debug.c  print.c  print.h  serial.c  symbols.c
src/devices/graphics/: graphics.c  vga.c
src/itr/: itr.c  pic.c
src/mm/: alloc.c  mm.asm  mm.c  string.c
src/paging/: paging.c
src/sched/: sched.c
